Fix freeze on opening a hi-dpi image with a vector layer

There was a bug in `KisShapeLayerCanvas::setImage()`, which requested
an update in **image** coordinates instead of **document** coordinates.
This caused a really huge update to be requested (330704x466138 pixels).
These pixels were mostly outside of the image bounds, so were cropped
by the cropping mechanism in `KisMergeWalker`. But due to a mis-optimization in `KisSimpleUpdatesQueue`, these noop updates could
choke the queue and the scheduler.

BUG:519785